<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_pump"
            android:icon="@drawable/pump"
            android:title="@string/menu_pump" />
    </group>

    <item android:title="Contact Us">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/contact"
                android:title="@string/menu_contact" />
        </menu>
    </item>
    <item android:title="About Us">
        <menu>
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/developer"
                android:title="@string/menu_developer" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
